--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "git@github.com:Ziqing19/MyMint.git"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
