--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@nivo/core": "^0.67.0",
+    "@nivo/line": "^0.67.0",
     "@nivo/pie": "^0.67.0",
+    "@nivo/scatterplot": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
