--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "react-bootstrap": "^1.5.2"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
