--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongodb": "^3.6.5",
     "morgan": "~1.9.1",
     "react-bootstrap": "^1.5.2",
-    "react-datepicker": "^3.7.0"
+    "react-datepicker": "^3.7.0",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
