--- a/package.json
+++ b/package.json
@@ -22,12 +22,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.5",
-    "morgan": "~1.9.1",
-    "react-alert": "^7.0.2",
-    "react-alert-template-basic": "^1.0.0",
-    "react-bootstrap": "^1.5.2",
-    "react-datepicker": "^3.7.0",
-    "react-icons": "^4.2.0"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
